[package]
name = "leptos-leaflet"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
leaflet = { path = "../leaflet" }
leptos = { version = "0.4", default-features = false }
leptos_meta = { version = "0.4", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
regex = "1.8"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = ["console", "HtmlElement", "HtmlDivElement"]

[features]
default = ["csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
csr = ["leptos/csr", "leptos_meta/csr"]
ssr = ["leptos/ssr", "leptos_meta/ssr"]
